# ros_tdlas_simulator

./: .~lock.Install_guide.odt#  Install_guide.odt  README.md  simulated_tdlas.kdev4
.kdev4/: simulated_MOX.kdev4  simulated_tdlas.kdev4
Docs/: .~lock.Install_guide.odt#  Info.odt  Install_guide.odt
dispersion_simulation/: CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  mainpage.dox  manifest.xml.backup  package.xml  package.xml~
dispersion_simulation/src/: Filamentproperties.cpp  Filamentproperties.cpp~  Filamentproperties.h  Filamentproperties.h~  README  algorithm.c  algorithm.c~  algorithm.h  algorithm.h~  configuration.c  configuration.h  environment.c  environment.h  filament.c  filament.h  flow.c  flow.c~  flow.h  flow_reader.c  flow_reader.c~  flow_reader.h  foamToFilament.c  foamToFilament.h  global.c  global.h  hit_rate.c  hit_rate.h  main.cpp  main.cpp~  main.h  main.h~  mtwist.c  mtwist.h  utility.c  utility.h
dispersion_simulation/src/CSV/: parser.m
dispersion_simulation/src/dispersion_simulation/msg/: _SourceLoc.py  __init__.py
dispersion_simulation/src/dispersion_simulation/srv/: __init__.py
dispersion_simulation/src/html/: algorithm_8c.html  algorithm_8h.html  algorithm_8h_source.html  annotated.html  classes.html  configuration_8c.html  configuration_8h.html  configuration_8h_source.html  display_8c.html  display_8h.html  display_8h_source.html  environment_8c.html  environment_8h.html  environment_8h_source.html  filament_8c.html  filament_8h.html  filament_8h_source.html  files.html  flow_8c.html  flow_8h.html  flow_8h_source.html  flow__reader_8c.html  flow__reader_8h.html  flow__reader_8h_source.html  foam_to_filament_8c.html  foam_to_filament_8h.html  foam_to_filament_8h_source.html  functions.html  functions_vars.html  global_8c.html  global_8h.html  global_8h_source.html  globals.html  globals_0x62.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x66.html  globals_0x68.html  globals_0x6b.html  (+49 more)
dispersion_simulation/src/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_77.html  all_78.html  all_79.html  classes_6d.html  classes_73.html  defines_62.html  defines_63.html  defines_64.html  defines_65.html  defines_66.html  defines_68.html  defines_6c.html  defines_6d.html  defines_6e.html  defines_70.html  defines_72.html  defines_73.html  defines_75.html  defines_77.html  enums_65.html  enumvalues_63.html  (+40 more)
dispersion_simulation/src/input/: Velocity.dat_U  Velocity.dat_V  Velocity.dat_W  Velocity.dat_Y  Velocity.dat_Z  parse.pl  velocity.dat_X
dispersion_simulation/src/msg/: _ChemicalValue.py  __init__.py  _odor.py  _readings.py
dispersion_simulation/src/srv/: ChemicalId.srv  _ChamicalValue11.py  _ChemicalId.py  _SensorPosition.py
environment/: CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  Environment.vcg  configuration_dispsim.rviz  mainpage.dox  manifest.xml.backup  package.xml  package.xml~
environment/map/: empty_map.yaml~  empty_map2.pgm  ph2_map3.yaml~
environment/src/: environment.cpp  environment.cpp~  environment.h
environment/src/navigation_stage/launch/: move_base_multi_robot.launch  move_base_multi_robot.launch~
environment/src/navigation_stage/stage_config/maps/: multi_robots.yaml  willow-full.pgm
environment/src/navigation_stage/stage_config/worlds/: multi_robot.yml  willow-pr2-multi.world  willow-pr2-multi.world~
launch/: demo_launch.launch  demo_launch.launch~  demo_mox_launch.launch
msgs_and_srvs/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml  package.xml~
msgs_and_srvs/msg/: ChemicalValue.msg~  readings.msg~
msgs_and_srvs/src/msgs_and_srvs/msg/: _ChemicalValue.py  _SourceLoc.py  __init__.py  _odor.py  _readings.py
msgs_and_srvs/src/msgs_and_srvs/srv/: _ChamicalValue11.py  _SensorPosition.py  __init__.py
msgs_and_srvs/srv/: SensorPosition.srv  SensorPosition.srv~  SensorPosition2.srv
simulated_MOX/: CMakeLists.txt  mainpage.dox  manifest.xml.backup  package.xml  package.xml~
simulated_MOX/Untitled Folder/: fake_MOX.cpp  fake_MOX.h  moving_sensor.h  simulated_mox.hpp
simulated_MOX/src/: fake_MOX.cpp  fake_MOX.cpp~  fake_MOX.h  moving_sensor.cpp~  plot_old.fig  sensor_log.txt~  sensor_plot.m  sensor_plot.m~  simulated_mox.cpp~  simulated_mox.hpp~
simulated_MOX/src/fake_MOX/msg/: _ChemicalValue.py  __init__.py
simulated_MOX/src/fake_MOX/srv/: _SensorPosition.py
simulated_tdlas/: CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  mainpage.dox  manifest.xml.backup  package.xml
simulated_tdlas/.kdev4/: simulated_MOX.kdev4
simulated_tdlas/Untitled Folder/: fake_tdlas.cpp  moving_sensor.cpp  simulated_tdlas.cpp
simulated_tdlas/src/: ChemicalValue.h  fake_MOX.cpp~  fake_MOX.h~  fake_tdlas.cpp  fake_tdlas.h  listener.cpp  listener.h  readings.h
simulated_tdlas/src/fake_tdlas/msg/: _odor.py  _readings.py
simulated_tdlas/src/fake_tdlas/srv/: __init__.py
